# deca_auto

./: .gitignore  LICENSE  README.md  pyproject.toml  user_config.toml
deca_auto/: __init__.py  backend.py  comb_gen.py  config.py  excel_out.py  freqgrid.py  main.py  pdn.py  plotter.py  rlc_model.py  score.py  spice_model.py  utils.py
tests/: test_pdn.py  test_spice_model.py
